--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>FORMAS DE ME CONTACTAR</title>
+    <link rel="shortcut icon" href="imagens/icons8-símbolo-de-v-50.png" type="image/x-icon">
 </head>
 <body>
     
