--- a/index.html
+++ b/index.html
@@ -27,12 +27,19 @@
         <section class="contatos" id="contatos">
 
     
-                <a href="#" class="links" id="fb"> <img src="imagens/facebook-logo.png" alt="facebook"> <p>FACEBOOK</p> </a>
-                <a href="#" class="links" id="insta"> <img src="imagens/instagram (1).png" alt="instagram"> <p>INSTAGRAM</p> </a>
-                <a href="#" class="links" id="link"> <img src="imagens/linkedin.png" alt="linkedin"> <p>LINKEDIN</p> </a>
-                <a href="#" class="links" id="zap"> <img src="imagens/whatsapp.png" alt="whatsap"> <p>WHATSAP</p> </a>
-                <a href="#" class="links" id="tg"> <img src="imagens/telegram.png" alt="telegram"> <p>TELEGRAM</p> </a>
-                <a href="#" class="links" id="em"> <img src="imagens/email.png" alt="e-mail"> <p>E-MAIL</p> </a>
+                <a href="https://www.facebook.com/docnho69" class="links" id="fb" target="_blank"> <img src="imagens/facebook-logo.png" alt="facebook"> <p>FACEBOOK</p> </a>
+
+                <a href="https://instagram.com/vava_andrelino?utm_medium=copy_link" class="links" id="insta" target="_blank"> <img src="imagens/instagram (1).png" alt="instagram" > <p>INSTAGRAM</p> </a>
+
+                <a href="www.linkedin.com/in/ 
+                dautarin-osvaldo-carvalho-de-andrelino-3a058120b
+                " class="links" id="link" target="_blank"> <img src="imagens/linkedin.png" alt="linkedin"> <p>LINKEDIN</p> </a>
+
+                <a href="https://api.whatsapp.com/send?phone=558591684739" class="links" id="zap" target="_blank"> <img src="imagens/whatsapp.png" alt="whatsap"> <p>WHATSAP</p> </a>
+
+                <a href="https://t.me/O_docinho_69" class="links" id="tg" target="_blank"> <img src="imagens/telegram.png" alt="telegram"> <p>TELEGRAM</p> </a>
+
+                <a href="mailto:carvalhodeandrelino@gmail.com" class="links" id="em" target="_blank"> <img src="imagens/email.png" alt="e-mail"> <p>E-MAIL</p> </a>
 
             <button id="cima">
                 <a href="#eu"><img id="imcima" src="https://img.icons8.com/material-outlined/24/000000/circled-up-2.png"/></a>
