--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
     
 
-        <section class="nome" id="eu">
-            <img src="imagens/profile-pic (1).png" alt="Dautarim Osvaldo Carvalho Andrelino" class="eu" >
-            <h1 class="mnome">DAUTARIM OSVALDO CARVALHO ANDRELINO </h1>
+        <section class="nome" id="eu" onrev>
+            <div class="caixa-de-img">
+                <img src="imagens/profile-pic (1).png" alt="Dautarim Osvaldo Carvalho Andrelino" class="eu" >
+
+            </div>
+            <h1 class="mnome">DAUTARIM OSVALDO <span>CARVALHO ANDRELINO</span> </h1>
             <ion-icon name="chevron-down-outline" id="baixo" onclick="prabaixo()"></ion-icon>
             
         </section>
@@ -25,8 +28,7 @@
 
                 <a href="https://instagram.com/vava_andrelino?utm_medium=copy_link" class="links" id="insta" target="_blank"> <img src="imagens/instagram (1).png" alt="instagram" > <p>INSTAGRAM</p> </a>
 
-                <a href="www.linkedin.com/in/ 
-                dautarin-osvaldo-carvalho-de-andrelino-3a058120b
+                <a href="https://www.linkedin.com/in/dautarin-osvaldo-carvalho-de-andrelino-3a058120b
                 " class="links" id="link" target="_blank"> <img src="imagens/linkedin.png" alt="linkedin"> <p>LINKEDIN</p> </a>
 
                 <a href="https://api.whatsapp.com/send?phone=558591684739" class="links" id="zap" target="_blank"> <img src="imagens/whatsapp.png" alt="whatsap"> <p>WHATSAP</p> </a>
